--- a/pom.xml
+++ b/pom.xml
@@ -4,40 +4,28 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ontoology</groupId>
 	<artifactId>ontoology</artifactId>
-	<version>1.0.0</version>
-	<packaging>war</packaging>
-
+	<version>2.0.0</version>
 
 	<properties>
-		<spring-version>5.3.18</spring-version>
+		<spring-version>2.6.6</spring-version>
+		<jackson-core-version>2.13.2</jackson-core-version>
+		<jackson-databind-version>2.13.2.2</jackson-databind-version>
+		<apache-commons-version>1.4</apache-commons-version>
+		<apache-jena-version>4.4.0</apache-jena-version>
+		<jgit-version>6.1.0.202203080745-r</jgit-version>
 	</properties>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
 				<configuration>
-					<release>8</release>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>3.2.3</version>
-				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-					<warSourceExcludes>TestFiles</warSourceExcludes>
-					<warSourceExcludes>libraries</warSourceExcludes>
-				</configuration>
-			</plugin><plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<configuration>
-				<source>11</source>
-				<target>11</target>
-			</configuration>
-		</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -45,56 +33,43 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>2.6.6</version>
+			<version>${spring-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-			<version>2.6.6</version>
+			<version>${spring-version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-		</dependency>
-		<dependency>
-		  <groupId>javax.servlet.jsp</groupId>
-		  <artifactId>jsp-api</artifactId>
-		  <version>2.1</version>
-		  <scope>provided</scope>
-		</dependency>
-
 
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.3</version>
+			<version>${apache-commons-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.10.1</version>
+			<version>${jackson-core-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.12.6.1</version>
+			<version>${jackson-databind-version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-core -->
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-core</artifactId>
-			<version>4.2.0</version>
+			<version>${apache-jena-version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
 		<dependency>
 			<groupId>org.eclipse.jgit</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
-			<version>5.7.0.202003110725-r</version>
+			<version>${jgit-version}</version>
 		</dependency>
 
 	</dependencies>
