--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ontoology</groupId>
-	<artifactId>ontoology</artifactId>
+	<groupId>ontoology-dd</groupId>
+	<artifactId>ontoology-dd</artifactId>
+	<packaging>jar</packaging>
 	<version>2.0.0</version>
 
 	<properties>
@@ -14,11 +15,26 @@
 		<apache-jena-version>4.4.0</apache-jena-version>
 		<jgit-version>6.1.0.202203080745-r</jgit-version>
 		<junit-version>5.8.2</junit-version>
+		<mvn-jar-plugin-version>3.2.2</mvn-jar-plugin-version>
 	</properties>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>main.java.com.ontoology.Main</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -26,6 +42,11 @@
 					<source>11</source>
 					<target>11</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${mvn-jar-plugin-version}</version>
 			</plugin>
 		</plugins>
 	</build>
